--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
         <p>VS</p>
         <div class="computer_choise">
           <!-- <i class="fa-regular fa-hand-rock"></i> -->
-          <i class="fa-regular fa-hand-scissors"></i>
+          <!-- <i class="fa-regular fa-hand-scissors"></i> -->
           <!-- <i class="fa-regular fa-hand"></i> -->
         </div>
       </div>
